# SRAM-PAM-OIDC

./: .gitmodules  CMakeLists.txt  README.md  env.template  logging.c  logging.h  pam_sram_oidc.c
docker/: Dockerfile.builder.ubuntu20  Dockerfile.runner.ubuntu20  Dockerfile.ubuntu20  entrypoint.sh  sram  sram_config.json.template
src/: CMakeLists.txt  defs.h  pam_sram_oidc.c  pamtester.cpp  sram_oidc_authenticate.cpp  sram_oidc_authenticate.h  url_request.cpp  url_request.h
